# maxpro

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ReadMe.md  pyproject.toml  requirements.txt  zensical.toml
.github/: pull_request_template.md
.github/workflows/: CI.yml  pypi.yml  rust-build-test.yml
docs/: examples.md  index.md  python-api.md  rust-api.md
examples/python/: basic_maximin.py  basic_maxpro.py
python/: comparison_r.py  comparisons.py  figures.py  pymaxpro.py
src/: anneal.rs  enums.rs  lhd.rs  lib.rs  main.rs  maximin_utils.rs  maxpro_utils.rs  order.rs
