[package]
name = "maxpro"
version = "0.1.0"
edition = "2024"

[lib]
name = "maxpro"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = {version = "4.5.49", features = ["derive"]}
ndarray = {version = "0.16.1", features=["rayon"]}
numpy = "0.21"
rand = "0.9.2"
rayon = "1.11.0"
plotters = "0.3"
pyo3 = { version = "0.21", features = ["extension-module"] }
