[package]
name = "maxpro"
version = "0.1.0"
edition = "2024"

[lib]
name = "maxpro"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = {version = "4.5.49", features = ["derive"]}
rand = "0.9.2"
rayon = "1.11.0"
plotters = "0.3"

[dependencies.pyo3]
version = "0.27" 
optional = true 
features = ["extension-module"]

[features]
default = []
# Define the feature that enables the PyO3 code, pulling in the optional dependency
pyo3-bindings = ["dep:pyo3"]