[package]
name = "maxpro"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mrhheffernan/maxpro"
license = "MIT OR Apache-2.0"
description = "Maximum Projection and Maximin Latin Hypercube Design creation and optimization"
authors = ["Matthew Heffernan"]
keywords = [
    "machine-learning",
    "doe",
    "latin-hypercube",
    "gaussian-process",
    "optimization",
]
categories = ["algorithms", "mathematics", "science"]
exclude = [".github/", "python/", "requirements.txt"]
readme = "README.md"


[lib]
name = "maxpro"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = {version = "4.5.49", features = ["derive"]}
rand = "0.9.2"
rayon = "1.11.0"

[dependencies.plotters]
version = "0.3"
optional = true

[dependencies.pyo3]
version = "0.27" 
optional = true 
features = ["extension-module"]

[features]
default = []
# Define the feature that enables the PyO3 code, pulling in the optional dependency
pyo3-bindings = ["dep:pyo3"]
debug = ["dep:plotters"]

