[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "maxpro"
version = "0.1.0"
description = "Maximum Projection and Maximin Latin Hypercube Design creation and optimization"
authors = [
    { name = "Matthew Heffernan" }
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mrhheffernan/maxpro"
keywords = [
    "machine-learning",
    "doe", 
    "latin-hypercube",
    "gaussian-process",
    "optimization"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3-bindings"]
module-name = "maxpro._maxpro"